// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /mentoringPropositions MentoringPropositions_200 1`] = `
Object {
  "data": Array [
    Object {
      "comment": "test",
      "createdAt": Any<String>,
      "id": 1,
      "updatedAt": Any<String>,
    },
  ],
  "length": 1,
  "max": 1,
  "page": 1,
}
`;

exports[`GET /mentoringPropositions/:id MentoringPropositions_200 1`] = `
Object {
  "campaign": null,
  "comment": "test",
  "createdAt": Any<String>,
  "id": Any<Number>,
  "internship": null,
  "mentor": null,
  "updatedAt": Any<String>,
}
`;

exports[`GET /mentoringPropositions/:id/campaigns MentoringPropositions_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": 1,
  "isPublish": true,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`GET /mentoringPropositions/:id/internships MentoringPropositions_200_WithLinkedData 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": 20191012,
  "id": 1,
  "isInternshipAbroad": true,
  "isProposition": false,
  "isPublish": true,
  "isValidated": false,
  "postalCode": "29280",
  "publishAt": 20191012,
  "startAt": 20191012,
  "state": "available",
  "subject": "test",
  "updatedAt": Any<String>,
}
`;

exports[`GET /mentoringPropositions/:id/mentors MentoringPropositions_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "email": "john.doe@enib.fr",
  "firstName": "John",
  "id": 2,
  "lastName": "Doe",
  "role": "default",
  "updatedAt": Any<String>,
}
`;

exports[`POST /mentoringPropositions ValidMentoringPropositions_200 1`] = `
Object {
  "comment": "test",
  "createdAt": Any<String>,
  "id": Any<Number>,
  "updatedAt": Any<String>,
}
`;

exports[`POST /mentoringPropositions/:id/campaigns/:internship_type_id/link MentoringPropositions_200_WithBusiness 1`] = `
Object {
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": 2,
  "isPublish": true,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`POST /mentoringPropositions/:id/internships/:internship_type_id/link MentoringPropositions_200_WithInternship 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": 20191012,
  "id": 2,
  "isInternshipAbroad": true,
  "isProposition": false,
  "isPublish": true,
  "isValidated": false,
  "postalCode": "29280",
  "publishAt": 20191012,
  "startAt": 20191012,
  "state": "available",
  "subject": "test",
  "updatedAt": Any<String>,
}
`;

exports[`POST /mentoringPropositions/:id/mentors/:mentor_id/link MentoringPropositions_200_WithMentor 1`] = `
Object {
  "createdAt": Any<String>,
  "email": "john.doe@enib.fr",
  "firstName": "John",
  "id": 3,
  "lastName": "Doe",
  "role": "default",
  "updatedAt": Any<String>,
}
`;

exports[`PUT /mentoringPropositions/:id MentoringPropositions_200_NotAnyDataUpdated 1`] = `
Object {
  "comment": "test",
  "createdAt": Any<String>,
  "id": Any<Number>,
  "updatedAt": Any<String>,
}
`;

exports[`PUT /mentoringPropositions/:id MentoringPropositions_200_UpdateAllData 1`] = `
Object {
  "comment": "additional data",
  "createdAt": Any<String>,
  "id": Any<Number>,
  "updatedAt": Any<String>,
}
`;
